[FEAT] 달력 페이지 임시 세팅

--- a/components/Calendar/index.scoped.scss
+++ b/components/Calendar/index.scoped.scss
@@ -65,7 +65,7 @@
 
 .calendar-grid.body .day-cell:hover {
     background-color: #f5f5f5;
-    transform: scale(1.02);
+    // transform: scale(1.02);
 }
 
 .calendar-grid.body .day-cell.empty {
