--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,7 @@
 @import 'tailwindcss';
 
 :root {
-  /* --background: #ffffff;
-  --foreground: #171717; */
-  font-family: 'Pretendard' !important;
+  font-family: 'Pretendard', sans-serif;
 }
 
 /* @theme inline {
