--- a/app/globals.css
+++ b/app/globals.css
@@ -43,118 +43,72 @@
   font-family: 'Pretendard', sans-serif;
 }
 
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  .text-head {
+    @apply font-bold text-2xl leading-2xl tracking-tight;
   }
-} */
 
-/* body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+  .text-head-2 {
+    @apply font-bold text-xl leading-xl tracking-tight;
+  }
 
-body {
-  color: #090a0c;
-}
+  .text-sub-head {
+    @apply font-bold text-base leading-base tracking-tight;
+  }
 
-.text-color-sub {
-  color: #26282e;
-}
+  .text-sub-head-2 {
+    @apply font-bold text-sm leading-sm tracking-tight;
+  }
 
-.text-color-info {
-  color: #5e6573;
-}
+  .text-sub-head-3 {
+    @apply font-bold text-xs leading-xs tracking-tight;
+  }
 
-.text-color-disabled {
-  color: #adb0b8;
-}
+  .text-body {
+    @apply font-normal text-base leading-base tracking-tight;
+  }
 
-.text-color-error {
-  color: #ee0000;
-}
+  .text-body-2 {
+    @apply font-normal text-sm leading-sm tracking-tight;
+  }
 
-.border-divider {
-  border: 1px solid #f1f2f4;
-}
+  .text-caption {
+    @apply font-normal text-xs leading-xs tracking-tight;
+  }
 
-.border-basic {
-  border: 1px solid #d5d7db;
-}
+  .text-color-sub {
+    @apply text-gray-700;
+  }
 
-.border-active {
-  border: 1px solid #26282e;
-}
+  .text-color-info {
+    @apply text-gray-400;
+  }
 
-.border-error {
-  border: 1px solid #ee0000;
-}
+  .text-color-disabled {
+    @apply text-gray-200;
+  }
 
-.bg-mark {
-  background-color: #fdbe00;
-}
+  .text-color-error {
+    @apply text-red-500;
+  }
 
-.text-head {
-  font-weight: bold;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  letter-spacing: -0.0625rem;
-}
+  .border-divider {
+    @apply border border-gray-50;
+  }
 
-.text-head-2 {
-  font-weight: bold;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  letter-spacing: -0.0625rem;
-}
+  .border-basic {
+    @apply border border-gray-100;
+  }
 
-.text-sub-head {
-  font-weight: bold;
-  font-size: 1rem;
-  line-height: 1.375rem;
-  letter-spacing: -0.0625rem;
-}
+  .border-active {
+    @apply border border-gray-700;
+  }
 
-.text-sub-head-2 {
-  font-weight: bold;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  letter-spacing: -0.0625rem;
-}
+  .border-error {
+    @apply border border-red-500;
+  }
 
-.text-sub-head-3 {
-  font-weight: bold;
-  font-size: 0.75rem;
-  line-height: 1.125rem;
-  letter-spacing: -0.0625rem;
-}
-
-.text-body {
-  font-weight: normal;
-  font-size: 1rem;
-  line-height: 1.375rem;
-  letter-spacing: -0.0625rem;
-}
-
-.text-body-2 {
-  font-weight: normal;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  letter-spacing: -0.0625rem;
-}
-
-.text-caption {
-  font-weight: normal;
-  font-size: 0.75rem;
-  line-height: 1.125rem;
-  letter-spacing: -0.0625rem;
+  .bg-mark {
+    @apply bg-yellow;
+  }
 }
