fix: CJB-9 leading, tracking 커스텀 값 오류 수정, body2long 추가

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,10 +36,6 @@
   --color-purple-50: #ece3ff;
   --color-purple-400: #905bff;
   --color-purple-500: #7534ff;
-
-  --line-height-base: 1.375rem; /* 22px. default: 1.5rem */
-  --line-height-xs: 1.125rem; /* 18px. default: 1rem */
-  --letter-spacing-tight: -0.0625rem; /* -1px. default: -0.025em */
 }
 
 :root {
@@ -80,35 +76,39 @@
 
 @layer utilities {
   .text-head {
-    @apply font-bold text-2xl leading-2xl tracking-tight;
+    @apply font-bold text-2xl leading-8 tracking-[-1px];
   }
 
   .text-head-2 {
-    @apply font-bold text-xl leading-xl tracking-tight;
+    @apply font-bold text-xl leading-6 tracking-[-1px];
   }
 
   .text-sub-head {
-    @apply font-bold text-base leading-base tracking-tight;
+    @apply font-bold text-base leading-[22px] tracking-[-1px];
   }
 
   .text-sub-head-2 {
-    @apply font-bold text-sm leading-sm tracking-tight;
+    @apply font-semibold text-sm leading-5 tracking-[-1px];
   }
 
   .text-sub-head-3 {
-    @apply font-bold text-xs leading-xs tracking-tight;
+    @apply font-semibold text-xs leading-[18px] tracking-[-1px];
   }
 
   .text-body {
-    @apply font-normal text-base leading-base tracking-tight;
+    @apply font-medium text-base leading-[22px] tracking-[-1px];
   }
 
   .text-body-2 {
-    @apply font-normal text-sm leading-sm tracking-tight;
+    @apply font-medium text-sm leading-5 tracking-[-1px];
+  }
+
+  .text-body-2-long {
+    @apply font-normal text-sm leading-6 tracking-[-1px];
   }
 
   .text-caption {
-    @apply font-normal text-xs leading-xs tracking-tight;
+    @apply font-normal text-xs leading-[18px] tracking-[-1px];
   }
 
   .text-color-sub {
