fix: CJB-9 red 컬러 빠진 것 해소

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
   --color-black: #090a0c;
 
   --color-yellow: #fdbe00;
+  --color-red: #ee0000;
 
   --color-violet-50: #f8e8ff;
   --color-violet-400: #cc4bff;
