fix: 스크롤바 지우기

--- a/app/globals.css
+++ b/app/globals.css
@@ -225,7 +225,18 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+
+    /* 스크롤바 숨기기 */
+    -ms-overflow-style: none;
+    /* 인터넷 익스플로러 */
+    scrollbar-width: none;
+    /* 파이어폭스 */
   }
+
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
